@startuml

hide circle
hide stereotype

skinparam class {
    ArrowColor black
    BackgroundColor white
    BackgroundColor<<Description>> lightblue
    BackgroundColor<<MomentInterval>> pink
    BackgroundColor<<Role>> lightgoldenrodyellow
    BackgroundColor<<PersonPlaceThing>> lightgreen
    BorderColor black
}

namespace contact {
    class ApplicationConfig<<Description>>
    class ResourceExceptionMapper<<Description>>

    ResourceExceptionMapper -[hidden]left- ApplicationConfig
    entity -[hidden]up- ApplicationConfig
    boundary -[hidden]up- ResourceExceptionMapper
    
    namespace boundary {
        class PersonResource<<MomentInterval>>
        class OrganizationResource<<MomentInterval>>
        class PagingListWrapper<T><<Description>>

        PagingListWrapper <-- PersonResource
        PagingListWrapper <-- OrganizationResource
    }

    namespace entity {
        abstract class LegalEntity<<PersonPlaceThing>>
        class Person<<PersonPlaceThing>>
        class Organization<<PersonPlaceThing>>

        LegalEntity <|-- Person
        LegalEntity <|-- Organization
    }
}

namespace security {
    class AuthenticationMechanism<<MomentInterval>>
    class RsaKeystore<<MomentInterval>>

    control -[hidden]up- AuthenticationMechanism
    boundary -[hidden]up- AuthenticationMechanism
    entity -[hidden]up- boundary

    namespace boundary {
        class AuthenticationResource<<MomentInterval>>
    }

    namespace control {
        class TokenCacheTimer<<MomentInterval>>
    }

    namespace entity {
        class Role<<Role>>
        class User<<PersonPlaceThing>>
        class InvalidToken<<PersonPlaceThing>>

        User -- Role
    }
}

@enduml
